# cmake-shared-lib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan/profiles/: windows-cmake-3.25.0-mingw-builds-8.1
scripts/: .boilerplate  .boilerplate.bat  clean  rebuild-mingw-w64
scripts/conan/: .boilerplate  build  build-mingw-w64  clean  create  install  install-mingw-w64
src/: main.cpp
